# hpm-metapac

./: Cargo.toml  README.md
src/: lib.rs
src/chips/: metadata_0000.rs  metadata_0001.rs  metadata_0002.rs  metadata_0003.rs  metadata_0004.rs  metadata_0005.rs  metadata_0006.rs  metadata_0007.rs  metadata_0008.rs  metadata_0009.rs  metadata_0010.rs  metadata_0011.rs  metadata_0012.rs  metadata_0013.rs  metadata_0014.rs  metadata_0015.rs  metadata_0016.rs  metadata_0017.rs  metadata_0018.rs  metadata_0019.rs  metadata_0020.rs  metadata_0021.rs  metadata_0022.rs  metadata_0023.rs  metadata_0024.rs  metadata_0025.rs  metadata_0026.rs  metadata_0027.rs  metadata_0028.rs  metadata_0029.rs  metadata_0030.rs  metadata_0031.rs  metadata_0032.rs  metadata_0033.rs  metadata_0034.rs  metadata_0035.rs  metadata_0036.rs  metadata_0037.rs  metadata_0038.rs
src/chips/hpm5301/: device.x  metadata.rs  pac.rs
src/chips/hpm5321/: metadata.rs  pac.rs
src/chips/hpm5331/: device.x  metadata.rs  pac.rs
src/chips/hpm5361/: metadata.rs  pac.rs
src/chips/hpm5e11/: device.x  metadata.rs
src/chips/hpm5e31/: metadata.rs
src/chips/hpm5e3y/: metadata.rs  pac.rs
src/chips/hpm6220/: metadata.rs  pac.rs
src/chips/hpm6240/: metadata.rs  pac.rs
src/chips/hpm6260/: metadata.rs  pac.rs
src/chips/hpm6264/: metadata.rs  pac.rs
src/chips/hpm6280/: metadata.rs  pac.rs
src/chips/hpm6284/: device.x  metadata.rs  pac.rs
src/chips/hpm6320/: metadata.rs  pac.rs
src/chips/hpm6330/: metadata.rs  pac.rs
src/chips/hpm6340/: metadata.rs  pac.rs
src/chips/hpm6350/: metadata.rs  pac.rs
src/chips/hpm6360/: device.x  metadata.rs  pac.rs
src/chips/hpm6364/: device.x  metadata.rs  pac.rs
src/chips/hpm6420/: metadata.rs  pac.rs
src/chips/hpm6430/: metadata.rs  pac.rs
src/chips/hpm6450/: metadata.rs  pac.rs
src/chips/hpm6454/: metadata.rs  pac.rs
src/chips/hpm64a0/: device.x  metadata.rs  pac.rs
src/chips/hpm64g0/: metadata.rs  pac.rs
src/chips/hpm6730/: metadata.rs  pac.rs
src/chips/hpm6750/: device.x  metadata.rs  pac.rs
src/chips/hpm6754/: metadata.rs  pac.rs
src/chips/hpm6830/: device.x  metadata.rs  pac.rs
src/chips/hpm6850/: device.x  metadata.rs  pac.rs
src/chips/hpm6880/: device.x  metadata.rs  pac.rs
src/chips/hpm68d2/: metadata.rs  pac.rs
src/chips/hpm68d3/: metadata.rs
src/chips/hpm68d4/: metadata.rs
src/chips/hpm6e50/: device.x  metadata.rs  pac.rs
src/chips/hpm6e60/: device.x  metadata.rs  pac.rs
src/chips/hpm6e6y/: metadata.rs  pac.rs
src/peripherals/: acmp_common.rs  acmp_v6e.rs  adc12_v67.rs  adc16_v53.rs  adc16_v63.rs  adc16_v67.rs  adc16_v68.rs  adc16_v6e.rs  bcfg_v62.rs  bcfg_v67.rs  bcfg_v68.rs  bkey_common.rs  bmon_common.rs  bpor_v67.rs  bpor_v68.rs  bsec_common.rs  butn_common.rs  cam_v67.rs  cam_v68.rs  can_v67.rs  clc_v6e.rs  conctl_v67.rs  crc_common.rs  dac_v53.rs  dac_v63.rs  dao_v67.rs  dao_v68.rs  ddrctl_v68.rs  ddrphy_v68.rs  dma_v53.rs  dma_v62.rs  dma_v67.rs  dma_v6e.rs  dmamux_common.rs  enet_v63.rs  enet_v67.rs  enet_v68.rs  esc_v6e.rs  ewdg_v53.rs  ewdg_v68.rs  (+121 more)
src/registers/: acmp_common.rs  acmp_v6e.rs  adc12_v67.rs  adc16_v53.rs  adc16_v63.rs  adc16_v67.rs  adc16_v68.rs  adc16_v6e.rs  bcfg_v62.rs  bcfg_v67.rs  bcfg_v68.rs  bkey_common.rs  bmon_common.rs  bpor_v67.rs  bpor_v68.rs  bsec_common.rs  butn_common.rs  cam_v67.rs  cam_v68.rs  can_v67.rs  clc_v6e.rs  conctl_v67.rs  crc_common.rs  dac_v53.rs  dac_v63.rs  dao_v67.rs  dao_v68.rs  ddrctl_v68.rs  ddrphy_v68.rs  dma_v53.rs  dma_v62.rs  dma_v67.rs  dma_v6e.rs  dmamux_common.rs  enet_v63.rs  enet_v67.rs  enet_v68.rs  esc_v6e.rs  ewdg_v53.rs  ewdg_v68.rs  (+119 more)
(+37 files in other folders)
