[package]
name = "hpm-metapac"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hpmicro/hpm-data"
homepage = "https://github.com/hpmico/hpm-data"
description = "Peripheral Access Crate (PAC) for all HPM's MCU chips, including metadata."
authors = ["Andelf <andelf@gmail.com>"]
documentation = "https://docs.rs/hpm-metapac"
categories = ["embedded", "no-std", "hardware-support"]
keywords = ["hpm", "hpmicro", "svd2rust", "no_std", "embedded"]
readme = "README.md"

# `cargo publish` is unable to figure out which .rs files are needed due to the include! magic.
include = ["**/*.rs", "**/*.x", "Cargo.toml"]

[package.metadata.docs.rs]
features = ["hpm5361", "pac", "metadata"]
default-target = "riscv32imafc-unknown-none-elf"
targets = []

[dependencies]
riscv = "0.16.0"
riscv-pac = "0.3.0"
riscv-rt = { version = "0.16.0", optional = true }

[features]
default = ["pac"]

# Build the actual PAC. Set by default.
# If you just want the metadata, unset it with `default-features = false`.
pac = []

# Build the chip metadata.
# If set, a const `hpm_metapac::METADATA` will be exported, containing all the
# metadata for the currently selected chip.
metadata = []

rt = ["dep:riscv-rt"]
memory-x = []

defmt = []

# Chip-selection features (filled by script)
hpm5301 = []
hpm5321 = []
hpm5331 = []
hpm5361 = []
hpm5e11 = []
hpm5e31 = []
hpm5e3y = []
hpm6220 = []
hpm6240 = []
hpm6260 = []
hpm6264 = []
hpm6280 = []
hpm6284 = []
hpm6320 = []
hpm6330 = []
hpm6340 = []
hpm6350 = []
hpm6360 = []
hpm6364 = []
hpm6420 = []
hpm6430 = []
hpm6450 = []
hpm6454 = []
hpm64a0 = []
hpm64g0 = []
hpm6730 = []
hpm6750 = []
hpm6754 = []
hpm6830 = []
hpm6850 = []
hpm6880 = []
hpm68d2 = []
hpm68d3 = []
hpm68d4 = []
hpm6e50 = []
hpm6e60 = []
hpm6e6y = []
hpm6e70 = []
hpm6e80 = []
hpm6e84 = []
hpm6e8y = []
hpm6p31 = []
hpm6p41 = []
hpm6p81 = []
